[package]
name = "ethereum_rust-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["catch-panic"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
ethereum_rust-core.workspace = true
ethereum_rust-storage.workspace = true

[lib]
path = "./rpc.rs"
